# Lunur-Shell

./: .gitignore  README.md  config.toml  install_requirements.sh  install_update.sh  launcher.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: code-quality.yml  release.yml
assets/: CHANGELOG.md  CHANGELOG.mkdn  VERSION
assets/scripts/: GetCatalog.sh  hyprpicker.sh  updates.sh
modules/: __init__.py  bar.py  calculator.py  corners.py  keybinds.py  launcher.py  notification.py  osd.py
modules/snippets/: animator.py
services/: __init__.py  battery.py  bluetooth.py  brightness.py  custom_notification.py  network.py  notifications.py  playerctl.py  screen_record.py
shared/: __init__.py  button_toggle.py  buttons.py  circle_image.py  collapsible_groups.py  lottie.py  pop_over.py  reveal.py  scrolled_view.py  submenu.py  widget_container.py
shared/animated/: scale.py
styles/: _settings.scss  app_launcher.scss  cliphist.scss  datemenu.scss  emoji.scss  main.scss  notification.scss  osd.scss  playerctl.scss  qs_sliders.scss  quicksettings.scss  system_tray.scss  theme.scss  variable.scss  workspace.scss
tests/: test_calculator.py  test_functions.py
utils/: __init__.py  config.py  constants.py  exceptions.py  functions.py  gen_keybinds.py  icons.py  types.py  widget_settings.py  widget_utils.py
widgets/: __init__.py  applauncher.py  battery.py  cliphist.py  datetime_menu.py  emoji_picker.py  hyprpicker.py  mpris.py  playerctl.py  power_menu.py  power_profile.py  recorder.py  screenshot.py  system_tray.py  window_title.py  workspaces.py
(+18 files in other folders)
