[project]
name = "lunur-shell"
version = "0.4.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "click==8.3.1",
  "fabric",
  "ijson==3.4.0.post0",
  "loguru==0.7.3",
  "pygobject==3.50.0",
  "pygobject-stubs==2.16.0",
  "pytomlpp==1.1.0",
  "rlottie-python==1.3.8",
]

[tool.uv.sources]
fabric = { git = "https://github.com/Fabric-Development/fabric.git", rev = "main" }
